# api-python

./: .env  README.md  database.db  main.py  mkdocs.yml  poetry.toml  pyproject.toml  server.py
api_python/: serve.py
app/dabase/: client.py
app/interfaces/: books.py  commons.py  users.py
app/routers/: books.py  users.py
app/services/: service_users.py  services_books.py
docs/: index.md
tests/: test_api_python.py
